--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 
   .carousel-heading-text{
 	font: 300 120px/104px'Poppins', sans-serif;
-    color: #E8F6FF;
+    color: #9aa0a3;
     margin-left: -5px;
   }
 
@@ -306,7 +306,7 @@
   }
 
   .swiper-content-slide{
-	background-color: wheat;
+	background-color: #E4F2FB;
 	height: 70vh;
   }
 
@@ -400,12 +400,32 @@
   /*======================how it works?======================  */
   .how-it-works{
 	background-color: #E8F6FF;
+	height: auto;
+  }
+
+  /* ======================Hospital============================ */
+  .hospital-swiper{
+	/* width: 600px; */
+	/* height: 300px; */
+	background-color: blue;
+  }
+
+  .hospital-img{
+	height: 30vh
+  }
+
+  .hospital-wrapper{
+	background-color: #1371A1;
+	height: 55vh;
   }
 
   /* ========================download=================================== */
 
   .download{
 	background-color: #E8F6FF;
+  }
+  .download-text{
+	margin-bottom: 50px;
   }
 
   /* ==========================footer=================================== */
