--- a/index.css
+++ b/index.css
@@ -276,7 +276,7 @@
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-    background: #fff;
+    background: #e2e4e5;
     height: 40px;
     font-size: 14px;
     transition: all 0.5s;
