--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
 
   @media (min-width: 768px){
 	.carousel{
-		height:80%;
+		height:auto;
 		background-color: #E4F2FB;
 	  }
 	
@@ -132,7 +132,7 @@
 	 line-height: 1.25;
 	 letter-spacing: -1px;
 	 text-transform: uppercase;
-	 color: var(--color-green-200);
+	 color: #FF5851;;
 }
  .header {
 	 position: fixed;
@@ -333,8 +333,8 @@
 
   .swiper-content-slide{
 	background-color: #E4F2FB;
-	height: 80vh;
-	position: relative;
+    height: auto;
+    margin-bottom: 8%;
   }
 
 
