--- a/index.css
+++ b/index.css
@@ -527,6 +527,10 @@
 	margin: 0;
   }
   
+  .services-button{
+	padding-left: 25% !important;
+	padding-right: 25% !important;
+  }
  
 
 .box-danger:hover{
