--- a/index.css
+++ b/index.css
@@ -46,6 +46,27 @@
 
 /* ======================NAVAR===================================== */
 
+.menu-inner a:hover{
+	text-decoration: none;
+	color: #ff5851;
+	font-family: "Poppins", sans-serif;
+	}
+
+	.join-now-nav{
+		border-radius: 20px !important;
+	}
+
+
+	.join-now-nav:hover{
+		color: white !important;
+		
+	}
+
+	.login-nav:hover{
+		/* color: white; */
+		text-decoration: none;
+	}
+
 .header1 a {
   text-decoration: none;
   /* width: 100%; */
@@ -139,9 +160,7 @@ img {
   color: #ff5851;
 }
 .header {
-  position: fixed;
-  left: 0;
-  top: 0;
+
   width: 100%;
   height: auto;
   z-index: 10;
@@ -150,7 +169,7 @@ img {
   box-shadow: var(--shadow-medium);
 }
 .navbar {
-  margin-top: 6vh !important;
+  /* margin-top: 6vh !important; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -158,7 +177,7 @@ img {
   column-gap: 1rem;
   width: 100%;
   height: 4rem;
-  margin: 0 auto;
+  
 }
 .menu {
   position: fixed;
@@ -302,16 +321,18 @@ img {
 /*--------------------------------------------------------------
 # Top Bar
 --------------------------------------------------------------*/
+
+
+
+
+
+
 #topbar {
   background: #e2e4e5;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
   z-index: 996;
-}
-
-#topbar.topbar-scrolled {
-  top: -40px;
 }
 
 #topbar .contact-info a {
@@ -350,6 +371,8 @@ img {
 #topbar .social-links a:first-child {
   border-left: 0;
 }
+
+
 
 /* ================swiper-=============== */
 .swiper {
@@ -461,6 +484,10 @@ img {
 
     /* margin-top: -7rem; */
   }
+
+  .join-as-doctors{
+	display: flex;
+  }
 }
 
 .join-as-doctors{
@@ -533,7 +560,7 @@ h1 {
 }
 
 .box {
-  height: 200px;
+  height: 170px;
   width: 300px;
   overflow: hidden;
   /* border: 1px solid red; */
@@ -578,11 +605,13 @@ h1 {
   transition: background-image 0.5s ease;
 }
 
-.services1-bg:hover {
-  background-image: none;
+.search-bar-form-control{
+	padding-left: 33px;
+    opacity: .7;
 }
+
 .services2-bg {
-  background-image: url("http://amentotech.com/projects/doctreat/wp-content/uploads/2019/10/2.png");
+  background-image: url("http://amentotech.com/projects/doctreat/wp-content/uploads/2019/10/5.png");
   background-position: bottom right;
   background-repeat: no-repeat;
   background-size: auto;
@@ -619,6 +648,12 @@ h1 {
   border-radius: 129px;
   padding: 34px;
   background-color: white;
+}
+
+.how-it-work-img{
+	background-image: url('http://amentotech.com/projects/doctreat/wp-content/themes/doctreat/images/border-img.png');
+	padding: 20px;
+	background-size: 100% 100%;
 }
 
 /*--------------------------------------------------------------
@@ -710,6 +745,16 @@ h1 {
   margin-bottom: 50px;
 }
 
+
+
+/* ============================Hispitals-2========================== */
+
+.hospital-2-card-footer{
+	border-top: 1px solid #f1ecec;
+	margin-left: -5px;
+
+}
+
 /* ==========================footer=================================== */
 
 .upper-footer {
@@ -729,6 +774,11 @@ h1 {
   font-weight: bold;
 }
 
+footer li{
+	margin-top: 3px;
+	margin-bottom: 8px;
+}
+
 footer li a {
   text-decoration: none;
   color: black;
@@ -738,6 +788,7 @@ footer li a:hover {
   text-decoration: none;
   color: grey;
 }
+
 
 .footer-list li {
   position: relative;
@@ -760,4 +811,20 @@ footer li a:hover {
   height: 5px;
   border-radius: 50%;
   background-color: #ff5851;
+}
+
+
+.footer-icons{
+	font-size: 30px;
+	/* width: 60%; */
+	/* justify-content: space-between; */
+}
+
+.footer-icon{
+	margin-left: 13px;
+	margin-right: 13px;
+}
+
+.footer-number{
+	padding-left: 40px !important;
 }
