--- a/Pages/Search Doctors/index.css
+++ b/Pages/Search Doctors/index.css
@@ -1,6 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
   *{
+	font-family: 'Poppins', sans-serif;
+  }
+
+  body{
 	font-family: 'Poppins', sans-serif;
   }
 
@@ -316,9 +320,30 @@
     border-left: 0;
   }
 
-  /* ====================Search Section====================================== */
+  /* ====================Doctors Search Section====================================== */
+
+
   .search-section{
     
+  }
+
+  .doctor-search-btn{
+	padding-left: 40px;
+	padding-right: 40px;
+	border: 1px solid #3FABF3;
+	/* transition: 5 ease-in all; */
+  }
+
+  .doctor-search-btn2{
+	padding-top: 13px;
+	padding-left: 20px;
+	padding-right: 20px;
+  }
+
+  .doctor-search-btn:hover{
+	
+	background-color: #3FABF3;
+	
   }
 
   @media (min-width: 1px) and (max-width: 767px) {
@@ -337,9 +362,34 @@
 
 }
 
+.search-section{
+	background-color: #3D4461;
+}
+
 
   .search-input{
     height: 6vh;
+	font-weight: 400;
+    font-size: 13px;
+	color: #999;
+
+  }
+
+  .hid-search-input{
+	background-color: #3D4461;
+	color: white !important;
+	border-radius: 0px;
+	border: 1px solid #545252;
+  }
+
+  .hid-section-btn{
+	background-color: #83444F;
+    color: white;
+    border: 1px solid #FF5851;
+    height: 42px;
+    width: 117px;
+    font-size: 15px;
+    padding: 9px;
   }
 
   #myDiv {
@@ -348,8 +398,9 @@
     justify-content: center;
     height: auto;
     background-color: #31364E;
-    /* transition: display 5s linear; */
-    /* transition: height 3s linear; */
+	padding: 10px;
+    transition: display 5s linear;
+    transition: height 3s linear;
   }
   
   .show {
@@ -361,4 +412,74 @@
   
   .filters{
     width: 95%;
+  }
+
+
+  /* ===============Bread-Crums====================== */
+
+  .bread-crums{
+	margin-top: 25px;
+    margin-left: 40px;
+    font-size: 14px;
+    font-weight: 400;
+	text-decoration: none;
+  }
+  .bread-crums a{
+	
+	text-decoration: none;
+  }
+
+  /*================================== Search-Results ====================================*/
+
+  .search-results{
+	margin-top: 10vh;
+  }
+
+  .search-results-input{
+	width: 156px;
+    height: 35px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: 2px solid #999;
+    border-radius: 0px;
+    font-size: 14px;
+    font-weight: lighter;
+    color: gray;
+    font-family: sans-serif;
+  }
+
+  /* =============================Result-Card============================================= */
+
+  .result-card{
+	
+    /* border: 1px solid black; */
+    margin-top: 5vh;
+
+  }
+
+
+  .c-deatils ul li{
+	font-size: 14px;
+	font-weight: lighter;
+  }
+
+  .c-details-btn{
+	border: 1px solid #3FABF3;
+  }
+
+  .c-tags ul li a{
+	float: left;
+    color: #767676;
+    font-size: 12px;
+    padding: 0 14px;
+    line-height: 24px;
+	 text-decoration: none;
+    border-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background: #f7f7f7;
+	margin-left: 2px;
+	margin-right: 2px;
   }
